# TripleTriadSolver

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: data.rs  decks.rs  game.rs  main.rs  search.rs
