[package]
name = "triple_triad_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colorful = "0.2"
csv = "1"
directories = "4"
inquire = "0.2"
rand = "0.8"
rayon = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
